<resources>
    <string name="app_name" translatable="false">CeliaKIA</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_yahoraquecomo" translatable="false">¿Y ahora qué como?</string>
    <string name="menu_elmundodelaceliaquia" translatable="false">El mundo de la Celiaquía</string>
    <string name="menu_favoritos" translatable="false">Favoritos</string>
    <string name="menu_kia" translatable="false">KIA</string>
    <string name="menu_queesceliaquia" translatable="false">¿Qué es la Celiaquía?</string>
    <string name="menu_sintomas" translatable="false">Síntomas de la Celiaquía</string>
    <string name="menu_comosediagnostica" translatable="false">¿Cómo se diagnostica la Celiaquía?</string>
    <string name="menu_contaminacioncruzada" translatable="false">Contaminación cruzada</string>
    <string name="menu_vivirsingluten" translatable="false">¿Cómo vivir sin gluten en el hogar?</string>
    <string name="menu_dietalibredegluten" translatable="false">¿Cómo llevar una dieta libre de gluten?</string>
    <string name="menu_comoordenarlaheladera" translatable="false">¿Cómo ordenar la heladera?</string>
    <string name="menu_comerfuera" translatable="false">Comer fuera de casa</string>
    <string name="menu_quehacerhijoceliaco" translatable="false">¿Qué hacer si tengo un hijo celíaco?</string>
    <string name="menu_historiadekia" translatable="false">Historia de KIA</string>
    <string name="menu_sobrenosotros" translatable="false">Sobre nosotros</string>
    <string name="menu_explicacionfunciondekia" translatable="false">Explicación de la función de KIA</string>

    <string name="prefs_file" translatable="false">com.ids.celiakia.PREFERENCE_FILE_KEY</string>
    <string name="facebook_app_id" translatable="false">2722938047952714</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2722938047952714</string>
    <string name="proveedor" translatable="false">Proveedor</string>
    <string name="email" translatable="false">Email</string>
    <string name="cerrar_sesion" translatable="false">Cerrar sesión</string>
    <string name="ingresa" translatable="false">Ingresa</string>
    <string name="google" translatable="false">Google</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="imagenlogoceliakia" translatable="false">imagenLogoCeliakia</string>
    <string name="celiakia" translatable="false">CeliaKIA</string>
    <string name="ya_est_s_listo_para_cocinar" translatable="false">¿Ya estás listo para cocinar?</string>

    <string name="QueEsLaCeliaquia" translatable="false">
        Pendiente explicación qué es la celiaquía</string>
    <string name="Sintomas" translatable="false">
        Pendiente ingresar Síntomas</string>
    <string name="ComoSeDiagnostica" translatable="false">
        Pendiente explicación diagnóstico</string>
    <string name="ContaminacionCruzada" translatable="false">
        Pendiente explicación Contaminación Cruzada</string>
    <string name="ComoVivirSinGlutenEnElHogar" translatable="false">
        Pendiente explicación cómo vivir sin gluten en el hogar</string>
    <string name="ComoLlevarUnaDietaLibreDeGluten" translatable="false">
        Pendiente explicación cómo llevar una dieta libre de gluten</string>
    <string name="ComoOrdenarLaHeladera" translatable="false">
        Pendiente explicación cómo ordenar la heladera</string>
    <string name="ComerFueraDeCasa" translatable="false">
        Pendiente explicación comer fuera de casa</string>
    <string name="QueHacerSiTengoUnHijoCeliaco" translatable="false">
        Pendiente explicación qué hacer si tengo un hijo celíaco</string>
    <string name="HistoriaDeKIA" translatable="false">
        Pendiente historia de KIA</string>
    <string name="SobreNosotros" translatable="false">
        Pendiente sobre nosotros</string>
    <string name="ExplicacionDeFuncionKIA" translatable="false">
        Pendiente explicación de la función de KIA</string>
</resources>