<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_yahoraquecomo"
            android:icon="?android:attr/actionModeFindDrawable"
            android:title="@string/menu_yahoraquecomo" />
        <item
            android:id="@+id/nav_elmundodelaceliaquia"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/menu_elmundodelaceliaquia" />
        <item
            android:id="@+id/nav_favoritos"
            android:icon="@drawable/favoritos"
            android:title="@string/menu_favoritos" />
        <item
            android:id="@+id/kiaFragment"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/menu_kia" />
    </group>
</menu>