<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_yahoraquecomo">

    <fragment
        android:id="@+id/nav_yahoraquecomo"
        android:name="com.ids.celiakia.ui.yahoraquecomo.YAhoraQueComoFragment"
        android:label="@string/menu_yahoraquecomo"
        tools:layout="@layout/fragment_yahoraquecomo" />

    <fragment
        android:id="@+id/nav_elmundodelaceliaquia"
        android:name="com.ids.celiakia.ui.elmundodelaceliaquia.ElMundoDeLaCeliaquiaFragment"
        android:label="@string/menu_elmundodelaceliaquia"
        tools:layout="@layout/fragment_elmundodelaceliaquia" />

    <fragment
        android:id="@+id/nav_favoritos"
        android:name="com.ids.celiakia.ui.favoritos.FavoritosFragment"
        android:label="@string/menu_favoritos"
        tools:layout="@layout/fragment_favoritos" />
    <fragment
        android:id="@+id/kiaFragment"
        android:name="com.ids.celiakia.KiaFragment"
        android:label="fragment_kia"
        tools:layout="@layout/fragment_kia" />
</navigation>